--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="sk">
 <head>
+  <link
+          rel="icon"
+          href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💍️</text></svg>"
+  />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Karolína & Šimon</title>
@@ -71,8 +75,7 @@
 <header>
   <h1>Karolína & Šimon</h1>
   <img src="images/my.jpeg" alt="Karolína & Šimon" style="width: 100%; max-width: 600px; border-radius: 10px; margin-top: 1rem;">
-
-  <p>S radosťou oznamujeme, že si povieme svoje ÁNO</p>
+  
   <div id="countdown">Naša svadba začne o: ...</div>
 </header>
 
