Add transportation and checkin time

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       font-size: 1.8rem;
       color: #5a5a5a;
     }
-    .location, .details, .parking, .accommodation, .other, .map {
+    .location, .details, .parking, .accommodation, .other, .transportation {
       margin-top: 1.5rem;
     }
     a {
@@ -91,6 +91,11 @@
     <div style="width: 100%"><iframe width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=300&amp;hl=en&amp;q=%20Akademick%C3%A1%20329,%20969%2001%20Bansk%C3%A1%20%C5%A0tiavnica+(Kostol%20Nanebovzatia%20Panny%20M%C3%A1rie)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/collections/drones/">drones ireland</a></iframe></div>
   </div>
 
+  <div class="transportation">
+    <h2>🚗 Doprava</h2>
+    <p>Prosíme vás aby ste si zabezpečili dopravu na svadbu individuálne. Pokiaľ by to však bolo pre Vás komplikované, dajte nám vedieť a niečo určite vymyslíme.</p>
+  </div>
+
   <div class="parking">
     <h2>🅿️ Parkovanie pri kostole</h2>
     <p>S parkovaním je priamo pri kostole trochu problém, budeme sa snažiť mať niečo rezervované,
@@ -112,6 +117,8 @@
     <h2>🏨 Ubytovanie</h2>
     <p>Ak ste ubytovaní v Altmayeri a chceli by ste sa spýtať na detaily ubytovania, prípadne dohodnúť skorší príchod kľudne zavolajte priamo do penziónu na <a href="tel:+421915321205">+421 915 321 205</a>.</p>
     <p>Ak ste nás poprosili o ubytovanie, a zabudli sme Vám dať vedieť kde budete ubytovaní, ozvite sa nám prosím! Aj keď dúfame, že nič také sa nestalo :)</p>
+
+    <p>Check-in v Altmayeri je možný od 12:00.</p>
 
 
   </div>
