Fix altmayer map

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       Altmayer, Štiavnické Bane</a></strong>.
     </p>
 
-    <div style="width: 100%"><iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=400&amp;hl=en&amp;q=Horn%C3%A1%20Rove%C5%88%20431+(Penzi%C3%B3n%20Altmayer)&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/collections/drones/">drones ireland</a></iframe></div>
+    <div style="width: 100%"><iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=400&amp;hl=en&amp;q=(Penzi%C3%B3n%20Altmayer)&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
   </div>
 
   <div class="accommodation">
