Add parking info

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <p><strong>Miesto:</strong> Kostol Nanebovzatia Panny Márie, Banská Štiavnica</p>
     <p>Prosíme vás, aby ste prišli s malým predstihom. Tešíme sa na vás!</p>
 
-    <div style="width: 100%"><iframe width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=300&amp;hl=en&amp;q=%20Akademick%C3%A1%20329,%20969%2001%20Bansk%C3%A1%20%C5%A0tiavnica+(Kostol%20Nanebovzatia%20Panny%20M%C3%A1rie)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/collections/drones/">drones ireland</a></iframe></div>
+    <div style="width: 100%"><iframe width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=300&amp;hl=en&amp;q=%20Akademick%C3%A1%20329,%20969%2001%20Bansk%C3%A1%20%C5%A0tiavnica+(Kostol%20Nanebovzatia%20Panny%20M%C3%A1rie)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
   </div>
 
   <div class="transportation">
@@ -98,9 +98,13 @@
 
   <div class="parking">
     <h2>🅿️ Parkovanie pri kostole</h2>
-    <p>S parkovaním je priamo pri kostole trochu problém, budeme sa snažiť mať niečo rezervované,
-      ale nevieme to ešte zaručiť (Keď budeme mať detailnejšie info, aktualizujeme to tu).
+    <p>
+      Priamo nad kostolom je parkovisko, avšak cez víkend býva relatívne plné, a teda je pravdepodobné, že sa Vám tam zaparkovať nepodarí. Parkovisko je platené - 1.50 EUR/hod.
     </p>
+    <p>
+      10 minút pešo od kostola je parkovisko Staré Ihrisko na Mládežníckej, ktoré býva prázdnejšie - takisto platené, prvá hodina by mala byť zdarma.
+    </p>
+    <div style="width: 100%"><iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=400&amp;hl=en&amp;q=Ml%C3%A1de%C5%BEn%C3%ADcka%201505/23%20Parking%20Bansk%C3%A1%20%C5%A0tiavnica,+(Parkovisko%20Star%C3%A9%20Ihrisko)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>    Ak by ste náhodou ani tam parkovanie nenašli, kúsok nižšie je parkovisko Dolná, ktoré je od kostola zhruba 12 minút pešo.
   </div>
 
 
