--- a/index.html
+++ b/index.html
@@ -93,18 +93,19 @@
 
   <div class="transportation">
     <h2>🚗 Doprava</h2>
-    <p>Prosíme vás aby ste si zabezpečili dopravu na svadbu individuálne. Pokiaľ by to však bolo pre Vás komplikované, dajte nám vedieť a niečo určite vymyslíme.</p>
+    <p>Prosíme Vás aby ste si zabezpečili dopravu na svadbu individuálne. Pokiaľ by to však bolo pre Vás komplikované, dajte nám vedieť a niečo určite vymyslíme.</p>
   </div>
 
   <div class="parking">
     <h2>🅿️ Parkovanie pri kostole</h2>
     <p>
-      Priamo nad kostolom je parkovisko, avšak cez víkend býva relatívne plné, a teda je pravdepodobné, že sa Vám tam zaparkovať nepodarí. Parkovisko je platené - 1.50 EUR/hod.
+      Priamo nad kostolom je parkovisko, avšak cez víkend býva relatívne plné, a teda je možné, že sa Vám tam zaparkovať nepodarí. Parkovisko je platené - 1.50 EUR/hod.
     </p>
     <p>
-      10 minút pešo od kostola je parkovisko Staré Ihrisko na Mládežníckej, ktoré býva prázdnejšie - takisto platené, prvá hodina by mala byť zdarma.
+      10 minút pešo od kostola je parkovisko Staré Ihrisko na Mládežníckej, ktoré býva prázdnejšie - takisto platené (2 EUR/hod.), prvá hodina je zdarma.
     </p>
-    <div style="width: 100%"><iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=400&amp;hl=en&amp;q=Ml%C3%A1de%C5%BEn%C3%ADcka%201505/23%20Parking%20Bansk%C3%A1%20%C5%A0tiavnica,+(Parkovisko%20Star%C3%A9%20Ihrisko)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>    Ak by ste náhodou ani tam parkovanie nenašli, kúsok nižšie je parkovisko Dolná, ktoré je od kostola zhruba 12 minút pešo.
+    <div style="width: 100%"><iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=400&amp;hl=en&amp;q=Ml%C3%A1de%C5%BEn%C3%ADcka%201505/23%20Parking%20Bansk%C3%A1%20%C5%A0tiavnica,+(Parkovisko%20Star%C3%A9%20Ihrisko)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
+    Ak by ste náhodou ani tam parkovanie nenašli, kúsok nižšie je parkovisko Dolná, ktoré je od kostola zhruba 12 minút pešo.
   </div>
 
 
@@ -122,7 +123,7 @@
     <p>Ak ste ubytovaní v Altmayeri a chceli by ste sa spýtať na detaily ubytovania, prípadne dohodnúť skorší príchod kľudne zavolajte priamo do penziónu na <a href="tel:+421915321205">+421 915 321 205</a>.</p>
     <p>Ak ste nás poprosili o ubytovanie, a zabudli sme Vám dať vedieť kde budete ubytovaní, ozvite sa nám prosím! Aj keď dúfame, že nič také sa nestalo :)</p>
 
-    <p>Check-in v Altmayeri je možný od 12:00.</p>
+    <p>Ubytovať sa v Altmayeri je možné od 12:00, odubytovať sa môžte aj neskôr, ak by ste chceli dospať. Raňajky je možné dokúpiť za 8 EUR na recepcii pri príchode. </p>
 
 
   </div>
